--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.Waves">
         <activity android:name=".Success"></activity>
         <activity
-            android:name=".Activity"
+            android:name=".mvvm.Activity"
             android:exported="true"
             tools:ignore="Instantiatable">
             <intent-filter>
